# easy_gateway

./: .gitignore  README.md  cli.py  config.py  config.yaml  example_config.yaml  getaway_v1.py  pyproject.toml  req.txt  router_v1.py  test_router.py  test_run.py
.github/workflows/: publish.yml  test.yml
gateway/: core.py  handler.py
middleware/: base.py  logging_middleware.py  rate_limit_middleware.py
src/easy_gateway/: cli.py  config.py
src/easy_gateway.egg-info/: PKG-INFO  SOURCES.txt
src/easy_gateway/gateway/: core.py  handler.py
src/easy_gateway/gateway/admin/: router.py  security.py
src/easy_gateway/middleware/: base.py  logging_middleware.py  rate_limit_middleware.py
src/easy_gateway/router/: router.py
tests/: conftest.py  test_router.py
