[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-gateway"
version = "0.1.0"
description = "Simple and fast Gateway for python developers"
readme = "README.md"
authors = [
    {name = "Mark", email = "levmarkpost@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0",
]

[project.scripts]
easy-gateway = "easy_gateway.cli:main"

# Важно! Добавь эту секцию:
[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
Homepage = "https://github.com/MarkLevkovich/easy-gateway"
